# tgbog-ai

./: .gitignore  CMakeLists.txt  CMakePresets.json  launch.vs.json  main.cpp  vcpkg.json
include/: pch.hpp
include/bot/: Bot.hpp
include/clients/: AiClient.hpp  Gemini.hpp
include/db/: DataStorage.hpp  MessageData.hpp  SQLite3DB.hpp  UserContext.hpp
include/dto/: DataModels.hpp
include/helpers/: Config.hpp
include/logging/: Logger.hpp
include/model_context/: ModelContext.hpp
include/telegram/: MessageData.hpp
src/bot/: Bot.cpp
src/clients/: Gemini.cpp
src/db/: DataStorage.cpp  SQLite3DB.cpp
src/helpers/: Config.cpp
